<resources>
    <string name="app_name">SpaceX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launch">Launch</string>
    <string name="favorite">Favorite</string>
    <string name="filter">Filter</string>
    <string name="error_image">error image</string>
    <string name="error_text">No Internet Connection</string>
    <string name="success">Success</string>
    <string name="rocket_image">rocket image</string>
    <string name="success_image">success image</string>
    <string name="mission_logo">mission logo</string>
    <string name="roadster">Roadster</string>
    <string name="rockets">Rockets</string>
    <string name="falcon_1">Falcon 1</string>
    <string name="falcon_9">Falcon 9</string>
    <string name="falcon_heavy">Falcon Heavy</string>
    <string name="starship">Starship</string>
    <string name="launchpads">Launchpads</string>
    <string name="vafb_slc_3w">VAFB SLC 3W</string>
    <string name="ccsfs_slc_40">CCSFS SLC 40</string>
    <string name="stls">STLS</string>
    <string name="kwajalein_atoll">Kwajalein Atoll</string>
    <string name="vafb_slc_4e">VAFB SLC 4E</string>
    <string name="ksc_lc_39a">KSC LC 39A</string>
    <string name="only_success">Only success</string>
    <string name="apply">Apply</string>
    <string name="all">All</string>
    <string name="only_failure">Only failure</string>
    <string name="launch_image">Launch image</string>
    <string name="youtube_logo">youtube logo</string>
    <string name="article_logo">article logo</string>
    <string name="press_kit_logo">press kit logo</string>
    <string name="reddit_logo">reddit logo</string>
    <string name="wikipedia_logo">wikipedia logo</string>
    <string name="image_preview">image preview</string>
    <string name="diameter_image">diameter image</string>
    <string name="mass_image">mass image</string>
    <string name="height_image">height image</string>
    <string name="rocket_photo">rocket photo</string>
    <string name="first_stage">First stage</string>
    <string name="rocket">Rocket</string>
    <string name="engine_image">engine image</string>
    <string name="capsule_image">capsule image</string>
    <string name="core_image">core image</string>
    <string name="thrust_image">thrust image</string>
    <string name="barrel_image">barrel image</string>
    <string name="second_stage">Second stage</string>
    <string name="lending_legs_image">lending legs image</string>
    <string name="dollar_logo">dollar logo</string>
    <string name="percent_image">percent image</string>
    <string name="type">Type</string>
    <string name="build_year">Build year</string>
    <string name="role">Role</string>
    <string name="image_ship">image ship</string>
    <string name="marinetraffic">Marinetraffic.com</string>
    <string name="marinetraffic_logo">Marinetraffic logo</string>
    <string name="upcoming">Upcoming</string>
    <string name="save_to_favorites">save to favorites</string>
    <string name="flight_number_image">flight number image</string>
    <string name="calendar_image">calendar image</string>
    <string name="launchpads_image">launchpads image</string>
    <string name="no_favorite_launches">No Favorite launches.</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="count_image">Count image</string>
    <string name="mission_patch">Mission Patch</string>
    <string name="active">Active</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="weight">Weight</string>
    <string name="mass">Mass</string>
    <string name="first_flight">First flight</string>
    <string name="country">Country</string>
    <string name="company">Company</string>
    <string name="cost_per_launch">Cost per launch</string>
    <string name="launch_success_rate">Launch success rate</string>
    <string name="stages">Stages</string>
    <string name="engines">Engines</string>
    <string name="reusable">Reusable</string>
    <string name="trust_sea_level">Trust sea level</string>
    <string name="thrust_vacuum">Thrust vacuum</string>
    <string name="fuel_amount_tons">Fuel amount</string>
    <string name="burn_time">Burn time</string>
    <string name="thrust">Thrust</string>
    <string name="details">Details</string>
    <string name="mass_to_orbit">Mass to Orbit</string>
    <string name="reused">Reused</string>
    <string name="reuse_count">Reuse count</string>
    <string name="rtls_attempts">RTLS attempts</string>
    <string name="rtls_landings">RTLS landings</string>
    <string name="asds_attempts">ASDS attempts</string>
    <string name="asds_landings">ASDS landings</string>
    <string name="landpad">Landpad</string>
    <string name="landing_attempts">Landing attempts</string>
    <string name="landing_successes">landing successes</string>
    <string name="orbit">Orbit</string>
    <string name="lifespan_years">Lifespan (years)</string>
    <string name="reference_system">Reference system</string>
    <string name="regime">Regime</string>
    <string name="semi_major_axis_km">Semi Major Axis (km)</string>
    <string name="eccentricity">Eccentricity</string>
    <string name="periapsis_km">Periapsis (km)</string>
    <string name="apoapsis_km">Apoapsis (km)</string>
    <string name="period_min">Period (min)</string>
    <string name="water_landings">Water landings</string>
    <string name="launch_attempts">Launch attempts</string>
    <string name="launch_successes">Launch successes</string>
    <string name="imo">IMO</string>
    <string name="mmsi">MMSI</string>
    <string name="abs">ABS</string>
    <string name="home_port">Home port</string>
</resources>