<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/launchesFragment">

    <fragment
        android:id="@+id/launchesFragment"
        android:name="com.x5bartsoft.spacex.LaunchesFragment"
        android:label="@string/launch"
        tools:layout="@layout/fragment_launches" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.x5bartsoft.spacex.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/roadsterFragment"
        android:name="com.x5bartsoft.spacex.RoadsterFragment"
        android:label="@string/roadster"
        tools:layout="@layout/fragment_roadster" />
</navigation>