<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ship"
            type="com.x5bartsoft.spacex.model.response.launchdetail.Ship" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/l_ship_main_imageView"
                    loadOneImageFromUrl="@{ship.image}"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/image_ship"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/l_ship_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{ship.name}"
                    android:textColor="@color/darker"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_type_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_main_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/l_ship_main_imageView"
                    tools:text="Finn Falgout" />

                <ImageView
                    android:id="@+id/f_rocket_active_imageView"
                    getShipActive="@{ship.active}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/success_image"
                    app:layout_constraintBottom_toBottomOf="@+id/l_ship_name_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/l_ship_main_imageView"
                    app:srcCompat="@drawable/ic_active"
                    app:tint="@color/lightGreen" />


                <TextView
                    android:id="@+id/l_ship_type_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/type"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_role_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_type_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{ship.type}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_type_title_textView"
                    tools:text="Tug" />

                <TextView
                    android:id="@+id/l_ship_role_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/role"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_mass_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_role_textView"
                    getShipRole="@{ship}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_role_title_textView"
                    tools:text="Support Ship, Barge Tug" />

                <TextView
                    android:id="@+id/l_ship_mass_title_textView"
                    setShipVisibleInt="@{ship.massKg}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mass"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_imo_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_mass_textView"
                    getShipMass="@{ship}"
                    setShipVisibleInt="@{ship.massKg}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_mass_title_textView"
                    tools:text="843682 kg / 1860000 lbs" />

                <TextView
                    android:id="@+id/l_ship_imo_title_textView"
                    setShipVisibleInt="@{ship.imo}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/imo"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_mmsi_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_imo_textView"
                    setShipVisibleInt="@{ship.imo}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(ship.imo)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_imo_title_textView"
                    tools:text="7390765" />

                <TextView
                    android:id="@+id/l_ship_mmsi_title_textView"
                    setShipVisibleInt="@{ship.mmsi}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mmsi"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_abs_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_mmsi_textView"
                    setShipVisibleInt="@{ship.mmsi}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(ship.mmsi)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_mmsi_title_textView"
                    tools:text="100199370" />

                <TextView
                    android:id="@+id/l_ship_abs_title_textView"
                    setShipVisibleInt="@{ship.abs}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/abs"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_home_port_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_abs_textView"
                    setShipVisibleInt="@{ship.abs}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(ship.abs)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_abs_title_textView"
                    tools:text="568498" />

                <TextView
                    android:id="@+id/l_ship_home_port_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/home_port"
                    app:layout_constraintBottom_toTopOf="@+id/l_ship_year_built_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_home_port_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{ship.homePort}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_home_port_title_textView"
                    tools:text="Port Canaveral" />

                <TextView
                    android:id="@+id/l_ship_year_built_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/build_year"
                    app:layout_constraintBottom_toTopOf="@+id/f_rocket_wiki_imageView"
                    app:layout_constraintStart_toStartOf="@+id/l_ship_name_textView" />

                <TextView
                    android:id="@+id/l_ship_year_built_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(ship.yearBuilt)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/l_ship_year_built_title_textView"
                    tools:text="1975" />

                <ImageButton
                    android:id="@+id/f_rocket_wiki_imageView"
                    getShipLink="@{ship.link}"
                    loadImageForImageButton="@{ship.name}"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:alpha="0.2"
                    android:background="@drawable/shape_image_button"
                    android:contentDescription="@string/marinetraffic_logo"
                    android:elevation="5dp"
                    android:outlineProvider="background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>