<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightMediumGray"
    tools:context=".ui.fragments.LaunchesFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/f_launches_shimmer_layout"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_launch_row_placeholder" />

            <include layout="@layout/layout_launch_row_placeholder" />

            <include layout="@layout/layout_launch_row_placeholder" />

            <include layout="@layout/layout_launch_row_placeholder" />

            <include layout="@layout/layout_launch_row_placeholder" />

            <include layout="@layout/layout_launch_row_placeholder" />


        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/f_launches_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/layout_launch_row" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/f_launches_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/filter"
        android:focusable="true"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/f_launches_error_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:contentDescription="@string/error_image"
        android:src="@drawable/ic_wifi_off"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/f_launches_error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/f_launches_error_imageView"
        app:layout_constraintStart_toStartOf="@+id/f_launches_error_imageView"
        app:layout_constraintTop_toBottomOf="@+id/f_launches_error_imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>